fix for map not showing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -167,6 +167,7 @@
 #reportModal,
 #resultsOverlay,
 #pubDetailsOverlay,
+#fullMapOverlay,
 #cookieConsent,
 #cookieSettings,
 #cookieSettingsFloat,
